# scope-spotify-prompts

./: README.md  pyproject.toml
scope_spotify_prompts/: __init__.py  plugin.py  state.py
scope_spotify_prompts/pipelines/: __init__.py  pipeline.py  schema.py
tools/: scope-spotify-prompt-monitor.pyw
