[project]
name = "scope-spotify-prompts"
version = "0.3.0"
description = "Spotify now-playing prompt generator plugin for Daydream Scope"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Patrick Laing" },
]
dependencies = [
    "Pillow>=10.0.0",
    "requests>=2.32.0",
]

[project.entry-points."scope"]
scope_spotify_prompts = "scope_spotify_prompts.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
